# FBOW

./: .gitignore  CMakeLists.txt  ImagesSource.txt
Euroc_Data/: MH01MH02.txt  MH01MH03.txt  MH01MH04.txt  MH01MH05.txt  MH02MH03.txt  MH02MH04.txt  MH02MH05.txt  MH03MH04.txt  MH03MH05.txt  MH04MH05.txt
Euroc_Data/GroupSequence/: GroupSequence.txt
Euroc_Data_more/: MH01MH02.txt  MH01MH03.txt  MH01MH04.txt  MH01MH05.txt  MH02MH03.txt  MH02MH04.txt  MH02MH05.txt  MH03MH04.txt  MH03MH05.txt  MH04MH05.txt
Euroc_Data_more/GroupSequence/: GroupSequence.txt
Euroc_Data_new/: MH01MH02.txt  MH01MH03.txt  MH01MH04.txt  MH01MH05.txt  MH02MH03.txt  MH02MH04.txt  MH02MH05.txt  MH03MH04.txt  MH03MH05.txt  MH04MH05.txt
Euroc_MH/: CMakeLists.txt  RateAndSelect.cpp  Sequence.txt  image_matching.cpp  scores.txt
ImageMatch/: BestMatch.txt  CMakeLists.txt  RateAndSelect.cpp  Sequence.txt  SingleTest.cpp  image_matching.cpp
MH01_MH02/: BestMatch.txt  Sequence.txt
Pairs/: CMakeLists.txt  Group_Sequence_Set.cpp  Loop_Created.cpp  New_Loop.cpp
Pairs_Hilti/: CMakeLists.txt  Group_Sequence_Set_Hilti.cpp  Loop_Created_Hilti.cpp
Pairs_VMap/: Group_Sequence_Set.cpp  Loop_Created.cpp  ReIgMch.sh
VocCreate/: CMakeLists.txt  ImagesSource.txt  fbow_create_voc_step0.cpp  fbow_create_voc_step1.cpp  vc.sh
utils/: fbow_create_voc_step0.cpp  fbow_create_voc_step0_list.cpp  fbow_create_voc_step1_opencv.cpp
